package src.moduloCaja.vista;

public class VistaCaja {
    public void mostrarMensaje(String mensaje) {
        System.out.println(mensaje);
    }

    public void mostrarTotal(double total) {
        System.out.println("Total en caja: " + total + "€");
    }
}
