@startuml
package "moduloMaquina" {
    package "modelo" {
        class Maquina
    }
    package "vista" {
        class VistaMaquina
    }
    package "controlador" {
        class ControladorMaquina
    }
    class MaquinaFactory
}

package "moduloInventario" {
    package "modelo" {
        class Celda
        class Producto
    }
    package "vista" {
        class IVistaInventario
        class VistaInventario
    }
    package "controlador" {
        class ControladorInventario
    }
}

package "moduloCaja" {
    package "modelo" {
        class Caja
    }
    package "vista" {
        class VistaCaja
    }
    package "controlador" {
        class ControladorCaja
    }
}

package "moduloPago" {
    package "modelo" {
        interface Pago
        class Efectivo
        class Tarjeta
    }
    package "vista" {
        class VistaPago
    }
    package "controlador" {
        class ControladorPago
    }
}

package "moduloUsuario" {
    package "modelo" {
        class Usuario
    }
    package "vista" {
        class VistaUsuario
        class IVistaUsuario
    }
    package "controlador" {
        class ControladorUsuario
    }
    class UsuarioFactory
}

package "moduloEmpleado" {
    package "modelo" {
        class Empleado
    }
    package "vista" {
        class VistaEmpleado
    }
    package "controlador" {
        class ControladorEmpleado
    }
    class EmpleadoFactory
}

Maquina o-- Celda : contiene
Maquina o-- Caja : contiene
Celda *-- Producto : contiene
Usuario o-- Tarjeta
Usuario o-- Efectivo

Efectivo .u.|> Pago
Tarjeta .u.|> Pago
VistaInventario .u.|> IVistaInventario
VistaUsuario .u.|> IVistaUsuario

MaquinaFactory --> Maquina : crea
UsuarioFactory --> Usuario : crea
EmpleadoFactory --> Empleado : crea

ControladorMaquina --> Maquina
ControladorMaquina --> VistaMaquina

ControladorInventario --> Celda
ControladorInventario --> Producto
ControladorInventario --> IVistaInventario

ControladorCaja --> Caja
ControladorCaja --> VistaCaja

ControladorPago --> VistaPago

ControladorUsuario --> Usuario
ControladorUsuario --> IVistaUsuario

ControladorEmpleado --> Empleado
ControladorEmpleado --> VistaEmpleado

ControladorPago --> ControladorUsuario
ControladorPago --> ControladorInventario
ControladorPago -u-> ControladorCaja
ControladorInventario --> ControladorEmpleado
ControladorMaquina --> ControladorInventario
ControladorMaquina ---> ControladorCaja

@enduml